more comprehensive api spec
